new Single view completed + change server implementations for user module

--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -23,9 +23,11 @@
 
 	/*ListView*/
 	"actions": "Actions",
+	"edit": "Edit",
+	"delete": "Delete",
 
 	/*FormHeads*/
-	"edit": "Edit: __name__",
+	"editwithname": "Edit: __name__",
 	"add": "Add New",
 
 	/*FormErrors*/
