--- a/i18n/tr.i18n.json
+++ b/i18n/tr.i18n.json
@@ -23,9 +23,11 @@
 
 	/*ListView*/
 	"actions": "Eylemler",
+	"edit": "Düzenle",
+	"delete": "Sil",
 
 	/*FormHeads*/
-	"edit": "Düzenle: __name__",
+	"editwithname": "Düzenle: __name__",
 	"add": "Yeni Ekle",
 
 	/*FormErrors*/
