react,material-ui,formsy updated and many more changes on the project

--- a/i18n/en.i18n.json
+++ b/i18n/en.i18n.json
@@ -63,6 +63,7 @@
 
 	/*Family*/
 	"familys": "Families",
+	"family_name_hint": "Names of mother and father and their lastname",
 
 	/*Users*/
 	"users": "Users",
